# rust-workspace-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  IMPROVE_1.md  MACRO_FIXTURE_COMPARISON.md  MACRO_TEST_COVERAGE.md  MACRO_TEST_COVERAGE_FINAL.md  README.md  config.toml  debug_distributed.rs  debug_message.rs  debug_test.rs  install.sh  test_analytical_mode.rs
.claude/agents/: spec-implementer.md  spec-qa-validator.md
config/: hybrid_config.toml  lsp_config.toml
cypher/: actor_direct_viz.cypher  actor_graph.cypher  actor_visualization.cypher  actors_excluding_tests.cypher  all_actors_viz.cypher  check_sends.cypher  check_types.cypher  complete_actor_graph.cypher  debug_graph.cypher  debug_synthetic_calls.cypher  memgraph_schema.cypher  schema_discovery.cypher  show_actors_messages.cypher  show_schema.cypher  simple_schema.cypher
docs/: CLAUDE_CODE_INTEGRATION.md  MEMGRAPH_SETUP.md
docs/architecture/: architecture.md
docs/feat/: RUST_ANALYZER.md
src/: architecture.rs  config.rs  embeddings.rs  incremental.rs  lib.rs  main.rs  workspace.rs
src/analyzer/: framework_patterns.rs  global_index.rs  hybrid.rs  mod.rs  resolution.rs  workspace.rs  workspace_analyzer.rs
src/graph/: memgraph_client.rs  mod.rs  pool.rs
src/graph/migrations/: merge_actor_types.cypher
src/lsp/: client.rs  config.rs  manager.rs  mod.rs  models.rs
src/mcp/: enhanced_server.rs  fallback.rs  mod.rs  server.rs
src/parser/: ast_utils.rs  ast_walker.rs  mod.rs  references.rs  rust_parser.rs  symbols.rs  traits.rs
src/parser/tests/: README.md  actor_detection.rs  async_parsing.rs  call_detection.rs  default_pattern.rs  function_parsing.rs  generic_parsing.rs  impl_parsing.rs  instance_method_resolution.rs  kameo_message_detection.rs  macro_expansion.rs  macro_expansion_old.rs  message_detection.rs  mod.rs  operator_parsing.rs  reference_parsing.rs  test_trait_method_field_usage.rs  trait_parsing.rs  type_parsing.rs
src/parser/tests/fixtures/: actor_patterns.rs  call_patterns.rs  function_defs.rs  kameo_patterns.rs  macro_patterns.rs  mod.rs  trait_impls.rs  type_defs.rs
src/tests/: actor_graph_integration.rs  actor_inference_test.rs  dummy_workspace_test.rs  macro_expansion_test.rs  macro_unused_detection_test.rs  mod.rs  nz_debug_test.rs  simple_macro_test.rs  simple_spawn_test.rs  spawn_pattern_validation.rs  websocket_false_positive_test.rs
test-debug/: debug_architecture.sh  debug_function_calls.sh  test_architecture.sh  test_architecture_detailed.sh  test_architecture_specific.sh  test_coverage.sh  test_edge_cases.py  test_full_responses.sh  test_integration.py  test_lsp_precision.sh  test_lsp_value_add.sh  test_mcp_compliance.py  test_mcp_simple.sh
tests/: fixture_tests.rs  parser_regression.rs
