[package]
name = "workspace-analyzer"
version = "0.1.0"
edition = "2024"
description = "Tree-sitter based Rust workspace analyzer with Memgraph GraphRAG and MCP protocol support"
license = "MIT"
authors = ["Greg Tiller"]
repository = "https://github.com/anthropics/rust-workspace-analyzer"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[[bin]]
name = "analyzer"
path = "src/main.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "test-parser"
path = "src/bin/test_parser.rs"

[[bin]]
name = "test_minimal_type"
path = "src/bin/test_minimal_type.rs"

[[bin]]
name = "test_incremental_parsing"
path = "src/bin/test_incremental_parsing.rs"

[[bin]]
name = "test_unit_struct"
path = "src/bin/test_unit_struct.rs"

[[bin]]
name = "debug_trading_ta"
path = "debug_trading_ta.rs"

# [[bin]]
# name = "test_actor_fixes"
# path = "test-debug/test_actor_fixes.rs"

[[bin]]
name = "test_exact_crash"
path = "src/bin/test_exact_crash.rs"

[[bin]]
name = "test_trading_backend"
path = "src/bin/test_trading_backend.rs"

[[bin]]
name = "test_trading_file"
path = "src/bin/test_trading_file.rs"

# [[bin]]
# name = "test_test_detection"
# path = "test-debug/test_test_detection.rs"

# [[bin]]
# name = "test_simple_query"
# path = "test-debug/test_simple_query.rs"


[dependencies]
# Core parsing with tree-sitter
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

# Memgraph 3.0 connectivity
neo4rs = "0.7"
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# Workspace analysis
cargo_metadata = "0.18"
walkdir = "2.5"
notify = "6.1"

# MCP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance and utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4"] }
dashmap = "5.5"
rayon = "1.11"
clap = { version = "4.5", features = ["derive"] }

# Configuration and serialization
toml = "0.8"
dirs = "5.0"
num_cpus = "1.16"
thiserror = "1.0"
regex = "1.10"
bincode = "1.3"
flate2 = "1.0"

# File hashing for incremental updates
blake3 = "1.5"

# Development dependencies for testing
[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
tokio-test = "0.4"

# [[bin]]
# name = "check_edges"
# path = "test-debug/check_edges.rs"

# [[bin]]
# name = "test_message_actor_detection"
# path = "test-debug/test_message_actor_detection.rs"

# [[bin]]
# name = "test_scoped_message_impl"
# path = "test-debug/test_scoped_message_impl.rs"

