[package]
name = "workspace-analyzer"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter based Rust workspace analyzer with Memgraph GraphRAG and MCP protocol support"
license = "MIT"
authors = ["Greg Tiller"]
repository = "https://github.com/anthropics/rust-workspace-analyzer"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[[bin]]
name = "analyzer"
path = "src/main.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[dependencies]
# Core parsing with tree-sitter
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

# Memgraph 3.0 connectivity
neo4rs = "0.7"
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# Workspace analysis
cargo_metadata = "0.18"
walkdir = "2.5"
notify = "6.1"

# MCP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance and utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4"] }
dashmap = "5.5"
rayon = "1.11"
clap = { version = "4.5", features = ["derive"] }

# Configuration and serialization
toml = "0.8"
dirs = "5.0"
num_cpus = "1.16"
thiserror = "1.0"
regex = "1.10"
bincode = "1.3"
flate2 = "1.0"

# File hashing for incremental updates
blake3 = "1.5"

# Development dependencies for testing
[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
tokio-test = "0.4"
